--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="pt-br">
+    <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,34 +10,53 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+     <title>Meu feed - Filmes </title>
   </head>
+
   <body>
+    <h2>Thálita Gonçalves Santos </h2>
+
+    <h5>Assistidos: 5 </h5>
+    <h5>Ainda vou assistir: 2 </h5>
+
+    <ul>
+      <li> <a href= 'home'> Home</a></li>
+      <li> <a href= 'filmes'> Filmes</a></li>
+      <li> <a href= 'categorias'> Categorias</a></li>
+      <li> <a href= 'favoritos'> Favoritos</a></li>
+      <li> <a href= 'comentarios'> Comentários</a></li>
+    </ul>
+    
+    <h3>Deficiência na telinha </h3>
+    <br>
+
+    <section id="filmes">
+      <h3> Todos os filmes</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, eligendi in nemo aperiam mollitia perferendis reiciendis similique minus dignissimos voluptatibus. Reprehenderit delectus incidunt odio quaerat, dolorem eum mollitia autem eius!</p>
+
+    </section>
+
+    <section id="categorias">
+      <h3> Categorias por tipo de deficiência</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, eligendi in nemo aperiam mollitia perferendis reiciendis similique minus dignissimos voluptatibus. Reprehenderit delectus incidunt odio quaerat, dolorem eum mollitia autem eius!</p>
+    </section>
+
+    <section id="favoritos">
+      <h3> Meus Favoritos </h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, eligendi in nemo aperiam mollitia perferendis reiciendis similique minus dignissimos voluptatibus. Reprehenderit delectus incidunt odio quaerat, dolorem eum mollitia autem eius!</p>
+    </section>
+
+    <section id="comentarios">
+      <h3> Comentários</h3>
+      <p> Gostei</p>
+ 
+
+    </section>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
